# ogpf

./: CMakeLists.txt  ogpf.f90  ogpf.pc.cmake.in
cmake/: FCompilerConsistencyCheck.cmake  checkOutOfSource.cmake  fixupInstallNameDir.cmake  ogpf-config.cmake.in  pickFortranCompilerFlags.cmake  uninstall.cmake.in
cmake/pkg/: ogpf-config.cmake.in
